--- a/style.css
+++ b/style.css
@@ -28,6 +28,9 @@ nav{
     width: 140px;
     height: 61.65px;
 }
+.input{
+    color: #ff004f;
+}
 nav ul li{
     display: inline-block;
     list-style:none;
@@ -61,7 +64,11 @@ nav ul li a:hover::after{
 }
 .header-text h1{
     font-size: 60px;
-    margin-top: 20px;
+    margin-top: 8px;
+}
+.header-text h2{
+    font-size: 30px;
+    margin-top: -26px;
 }
 .header-text h1 span{
     color: #ff004f;
